# EgoVerse

./: .gitignore  CONTRIBUTING_DATA.md  CUSTOM_DATA_TRAINING.md  README.md  emimic  pi05.md  pull_models.sh  pyproject.toml  requirements-ray.txt  requirements.txt  setup_env.sh
docs/: invariant_representation_eval.md  sawyer_dino_cotrain.md
egomimic/: test_zarr.py  trainHydra.py
egomimic/algo/: hpt.py  pi.py
egomimic/eval/: eval_hpt.py  eval_latent.py  eval_video.py  latent_dataset.py
egomimic/hydra_configs/: train_zarr_cartesian.yaml  train_zarr_cartesian_pi.yaml  train_zarr_custom_franka_2cam.yaml  train_zarr_custom_franka_3cam.yaml  train_zarr_custom_human.yaml  train_zarr_custom_human_franka.yaml  train_zarr_franka3cam_2cam.yaml  train_zarr_franka3cam_human.yaml  train_zarr_keypoint_wrist.yaml  train_zarr_keypoints.yaml  train_zarr_mimicgen_cotrain.yaml  train_zarr_mimicgen_cycle_align.yaml  train_zarr_mimicgen_franka_only.yaml  train_zarr_ppp_human_franka.yaml  train_zarr_swapobjects_human_franka.yaml  viz_language.yaml
egomimic/hydra_configs/callbacks/: checkpoints.yaml
egomimic/hydra_configs/data/: aria.yaml  aria_keypoints.yaml  aria_keypoints_wrist.yaml  aria_pi.yaml  aria_qwen.yaml  bc_pickplace_eva_qwen.yaml  cotrain_franka3cam_human.yaml  cotrain_pi_base.yaml  (+25 more)
egomimic/models/: hpt_nets.py
egomimic/pl_utils/: pl_data_utils.py  pl_model.py
egomimic/robot/: rollout.py
egomimic/scripts/: run_conversion.py  viz_language.py
egomimic/utils/: egomimicUtils.py  hydra_resolvers.py  pose_utils.py  scale_utils.py  scheduler_utils.py  viz_utils.py
(+54 files in other folders)
